dev/test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express
spec:
  rules:
    - http:
        paths:
          - path: /mongo
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port: 
                  number: 8081
